# prism_reader

./: .gitignore  README.md  pyproject.toml
prism_reader/: downloader.py
smap_reader/: downloader.py
tests/: test_downloader.py
