[tool.poetry]
name = "smap-reader"
version = "0.1.0"
description = ""
authors = ["DKnapp64 <dknapp4@asu.edu>"]
readme = "README.md"
packages = [{include = "smap_reader"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
attrs = "^23.1.0"
requests-mock = "^1.11.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
